--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "make articles out of order but display normal",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --config webpack/webpack.config.js --mode development",
+    "start": "webpack-dev-server --config webpack/webpack.config.js --mode development",
+    "build": "webpack --config webpack/webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
