--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mess-articles",
-  "version": "0.0.1",
+  "name": "cbsama-ui",
+  "version": "0.0.5",
   "description": "make articles out of order but display normal",
-  "main": "index.js",
+  "main": "es/index.js",
+  "module": "es/index.es.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/webpack.config.js --mode development",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack/webpack.config.js --mode development",
     "build": "webpack --config webpack/webpack.config.js --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,11 +13,18 @@
     "react",
     "articles"
   ],
+  "files": [
+    "es/",
+    "package.json",
+    "README.md"
+  ],
   "author": "licb",
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cbsama-ui": "^0.0.5",
+    "father": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
