--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "NODE_ENV=development webpack-dev-server --config webpack/webpack.config.js --mode development",
     "build": "father build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "doc:dev":"father doc dev",
-    "doc:build":"father doc build",
-    "doc:deploy":"father doc deploy"
+    "doc:dev": "father doc dev",
+    "doc:build": "father doc build",
+    "doc:deploy": "father doc deploy"
   },
   "repository": {
     "type": "git",
@@ -45,7 +45,11 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.0.2",
     "webpack-dev-server": "^3.9.0"
   }
 }
