--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
+    "@umijs/fabric": "^1.2.12",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
