--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.5",
   "description": "make articles out of order but display normal",
   "main": "es/index.js",
-  "module": "es/index.es.js",
+  "module": "es/index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack/webpack.config.js --mode development",
+    "dev": "NODE_ENV=development webpack-dev-server --config webpack/webpack.config.js --mode development",
     "build": "father build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc:dev": "father doc dev",
@@ -29,10 +29,6 @@
   "author": "licb",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "cbsama-ui": "^0.0.5",
-    "father": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
@@ -41,6 +37,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "father": "^2.29.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
