--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "es/index.js",
   "module": "es/index.js",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server --config webpack/webpack.config.js --mode development",
+    "dev": "father doc dev",
     "build": "father build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc:dev": "father doc dev",
@@ -37,16 +37,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
-    "father": "^2.29.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
+    "@types/styled-components": "^4.4.2",
     "@umijs/fabric": "^1.2.12",
     "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.0",
+    "father": "^2.29.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
