--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,16 +17,6 @@
     "declaration": true,
     "emitDeclarationOnly": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "lib",
-    "es",
-    "dist",
-    "**/__tests__",
-    "**/__test__",
-    "**/demo"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "lib", "es", "dist", "**/__tests__", "**/__test__", "**/demo"]
 }
