--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cbsama-ui",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "make articles out of order but display normal",
   "main": "es/index.js",
   "module": "es/index.js",
@@ -32,12 +32,12 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "styled-components": "^4.4.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
