--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "father doc dev",
     "build": "father build && tsc --declarationDir ./lib && tsc --declarationDir ./es && node ./scripts/build-wind-up.js",
     "test": "father test",
+    "test:update": "father test --updateSnapshot",
+    "test:watch": "father test --watch",
+    "test:coverage": "father test --coverage",
     "precommit": "father pre-commit",
     "doc:dev": "father doc dev",
     "doc:build": "father doc build",
@@ -36,12 +39,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
+    "@testing-library/react": "^9.4.0",
     "@types/styled-components": "^4.4.2",
     "@umijs/fabric": "^1.2.12",
     "babel-loader": "^8.0.6",
@@ -54,6 +56,8 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
 }
