--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "author": "licb",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1"
@@ -44,6 +45,8 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.4",
     "@testing-library/react": "^9.4.0",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^25.1.2",
     "@types/styled-components": "^4.4.2",
     "@umijs/fabric": "^1.2.12",
     "babel-loader": "^8.0.6",
