--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "@types/classnames": "^2.2.9",
     "@types/jest": "^25.1.2",
     "@types/styled-components": "^4.4.2",
-    "@umijs/fabric": "^1.2.12",
+    "@umijs/fabric": "^2.0.2",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.0",
     "del": "^5.1.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "father": "^2.29.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
