--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,5 +29,5 @@ jobs:
         env:
           EMAIL: 545360100@qq.com # must be a verified email
           GH_TOKEN: ${{ secrets.ACCESS_TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: build/ # "_site/" by default
+          BUILD_DIR: .doc/ # "_site/" by default
           CNAME: https://aledenn.github.io/ # in case of custom domain
