--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  pre-deploy:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
         run: npm test
 
   deploy-doc:
-    needs: pre-deploy
+    needs: test
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -26,7 +26,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: build gh page
-        run: npm run doc:build
+        run: |
+          npm install
+          npm run doc:build
 
       - name: deploy gh page
         uses: Cecilapp/GitHub-Pages-deploy@master
@@ -37,13 +39,15 @@ jobs:
           CNAME: https://aledenn.github.io/ # in case of custom domain
 
   deploy-npm:
-    needs: pre-deploy
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: build package
-        run: npm run build
+        run: |
+          npm install
+          npm run build
 
       - name: deploy npm
         uses: JS-DevTools/npm-publish@v1
