--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.0",
     "del": "^5.1.0",
+    "dumi": "^1.0.15",
     "eslint-plugin-prettier": "^3.1.2",
     "father": "^2.29.1",
     "html-webpack-plugin": "^3.2.0",
