--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         env:
           EMAIL: 545360100@qq.com # must be a verified email
           GH_TOKEN: ${{ secrets.ACCESS_TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: .dist/ # "_site/" by default
+          BUILD_DIR: dist/ # "_site/" by default
 
   deploy-npm:
     needs: test
